--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#pycache
+ml/googleVision/__pycache__
+
 #model configuration
 ml/path_to_save_model (too big)
 
